# jitemania-solutions

./: .gitmodules  CMake-build-configuration.cmake.disabled  CMake-verbosity-configuration.cmake  CMakeLists.txt  README.md
1-jsd-configuration/2-jsd-ssc-template/: CMakeLists.txt  readme.md
1-jsd-configuration/2-jsd-ssc-template/0-ssc-cmake/: ssc-base-library-set-compiler-settings.cmake  ssc-derived-library-set-compiler-settings.cmake  ssc-executable-set-compiler-settings.cmake
1-jsd-configuration/2-jsd-ssc-template/1-ssc-repository/source-repository/ssc_base/: Ssc_base_class.cpp  ssc_base.h  ssc_base_class.cpp  ssc_base_class.h  ssc_base_function.c  ssc_base_function.h  ssc_base_sls.h
1-jsd-configuration/2-jsd-ssc-template/1-ssc-repository/source-repository/ssc_derived/: Ssc_derived_class.cpp  Ssc_derived_class.h  ssc_derived.h  ssc_derived_class.cpp  ssc_derived_class.h  ssc_derived_function.c  ssc_derived_function.h  ssc_derived_sls.h
1-jsd-configuration/2-jsd-ssc-template/1-ssc-repository/source-repository/ssc_executable/: Ssc_executable_class.cpp  Ssc_executable_class.h  ssc_executable_class.cpp  ssc_executable_class.h  ssc_executable_function.c  ssc_executable_function.h
1-jsd-configuration/2-jsd-ssc-template/1-ssc-repository/source-repository/ssc_executable_main/: ssc_executable_main_entry.cpp
1-jsd-configuration/2-jsd-ssc-template/2-ssc-base-library/: CMakeLists.txt
1-jsd-configuration/2-jsd-ssc-template/3-ssc-derived-library/: CMakeLists.txt
1-jsd-configuration/2-jsd-ssc-template/4-ssc-executable/: CMakeLists.txt
2-jsd-foreign/: CMakeLists.txt
6-jsd-experimental/0-cpp-standard/: CMakeLists.txt
6-jsd-experimental/0-cpp-standard/0-copy-move/: CMakeLists.txt
6-jsd-experimental/0-cpp-standard/0-copy-move/sources/: cs_main_entry.cpp
6-jsd-experimental/0-cpp-standard/0-copy-move/sources/cpp_standard/: base.cpp  base.h  derived.cpp  derived.h  internal.cpp  internal.h
7-jsd-libraries/0-library-subproject-template/: CMakeLists.txt
7-jsd-libraries/0-library-subproject-template/0-base-library-template/: CMakeLists.txt
7-jsd-libraries/0-library-subproject-template/0-base-library-template/sources/blt/: blt_class.cpp  blt_class.h  blt_function.h  blt_sls.h
7-jsd-libraries/0-library-subproject-template/1-derived-library-template/: CMakeLists.txt
7-jsd-libraries/0-library-subproject-template/1-derived-library-template/sources/dlt/: dlt_class.cpp  dlt_class.h  dlt_function.c  dlt_function.h  dlt_sls.h
9-jsd-applications/0-executable-template/: CMakeLists.txt
9-jsd-applications/0-executable-template/sources/: et_main_entry.cpp
9-jsd-applications/0-executable-template/sources/et/: et_class.cpp  et_class.h  et_function.c  et_function.h
